finally made ai working in production code